goldilocks/goldilocks-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: goldilocks
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "goldilocks"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goldilocks-dashboard
            port:
              number: 80
